Added new folders and files

--- a/Level3 task2/index.html
+++ b/Level3 task2/index.html
@@ -1,83 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Developer Internship Opportunities at Cognifyz Technologies</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <div class="container">
-            <img src="logo.png" alt="Cognifyz Technologies Logo" class="logo">
-            <h1>Web Developer Internship Opportunities at Cognifyz Technologies</h1>
-        </div>
-    </header>
-    
-    <main>
-        <div class="container">
-            <section class="introduction">
-                <h2>About the Internship</h2>
-                <p>Are you passionate about web development and eager to kickstart your career? Join us for an exciting internship program at Cognifyz Technologies, where you'll gain hands-on experience and valuable mentorship.</p>
-                <p>This internship is a great opportunity for students and recent graduates looking to expand their skills and work on real-world projects in a supportive environment.</p>
-            </section>
 
-            <h2>Why Choose Us?</h2>
-            <section class="highlights">
-                
-                <div class="highlight-item">
-                    <img src="real-world-experience.jpg" alt="Real World Experience">
-                    <p>Hands-on experience with real-world projects</p>
-                </div>
-                <div class="highlight-item">
-                    <img src="mentorship.jpg" alt="Mentorship">
-                    <p>Personalized mentorship frome perienced developers</p>
-                </div>
-                <div class="highlight-item">
-                    <img src="supportive-environment.jpg" alt="Supportive Environment">
-                    <p>Opportunity to learn and grow in a supportive environment</p>
-                </div>
-            </section>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Web Developer Internship Opportunities at Cognifyz Technologies</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-            <section class="qualifications">
-                <h2>Qualifications</h2>
-                <p>To succeed in this internship, we're looking for candidates with:</p>
-                <div class="qualifications-list">
-                    <ul>
-                        <li>Basic understanding of HTML, CSS, and JavaScript</li>
-                        <li>Passion for learning and problem-solving</li>
-                        <li>Ability to work well in a team environment</li>
-                    </ul>
-                </div>
-                <p>Prior experience or knowledge in the following areas is a plus:</p>
-                <div class="qualifications-list">
-                    <ul>
-                        <li>Front-end frameworks (e.g., React, Angular)</li>
-                        <li>Version control systems (e.g., Git)</li>
-                        <li>Responsive design principles</li>
-                    </ul>
-                </div>
-            </section>
+    <body>
+        <header>
+            <div class="container">
+                <img src="logo.png" alt="Cognifyz Technologies Logo" class="logo">
+                <h1>Web Developer Internship Opportunities at Cognifyz Technologies</h1>
+            </div>
+        </header>
 
-            <section class="cta">
-                <a href="#" class="cta-button">Apply Now</a>
-                <p>Have questions? <a href="#Contact">Contact Us</a></p>
-            </section>
-        </div>
-    </main>
+        <main>
+            <div class="container">
+                <section class="introduction">
+                    <h2>About the Internship</h2>
+                    <p>Are you passionate about web development and eager to kickstart your career? Join us for an
+                        exciting internship program at Cognifyz Technologies, where you'll gain hands-on experience and
+                        valuable mentorship.</p>
+                    <p>This internship is a great opportunity for students and recent graduates looking to expand their
+                        skills and work on real-world projects in a supportive environment.</p>
+                </section>
 
-    <footer>
-        <div class="container">
-            <p>Contact us:</p>
-            <p><img src="location.svg"> Nagpur, Maharashtra</p>
-            <p><img src="email.svg"><a href="mailto:cognifyztechnologies@gmail.com"> cognifyztechnologies@gmail.com</a></p>
-            <ul class="social-links">
-                <li><a href="https://www.instagram.com/cognifyz/" target="_blank"><img src="instagram.svg" alt="Instagram"></a></li>
-                <li><a href="https://www.linkedin.com/company/cognifyz/" target="_blank"><img src="linkedin.svg" alt="LinkedIn"></a></li>
-                <li><a href="https://www.youtube.com/channel/UCsJnLDwPILny8kx_yj4kzLQ" target="_blank"><img src="youtube.svg" alt="YouTube"></a></li>
-                <li><a href="https://t.me/cognifyz" target="_blank"><img src="telegram.svg" alt="Telegram"></a></li>
-            </ul>
-        </div>
-    </footer>    
-</body>
+                <h2>Why Choose Us?</h2>
+                <section class="highlights">
+
+                    <div class="highlight-item">
+                        <img src="real-world-experience.jpg" alt="Real World Experience">
+                        <p>Hands-on experience with real-world projects</p>
+                    </div>
+                    <div class="highlight-item">
+                        <img src="mentorship.jpg" alt="Mentorship">
+                        <p>Personalized mentorship frome perienced developers</p>
+                    </div>
+                    <div class="highlight-item">
+                        <img src="supportive-environment.jpg" alt="Supportive Environment">
+                        <p>Opportunity to learn and grow in a supportive environment</p>
+                    </div>
+                </section>
+
+                <section class="qualifications">
+                    <h2>Qualifications</h2>
+                    <p>To succeed in this internship, we're looking for candidates with:</p>
+                    <div class="qualifications-list">
+                        <ul>
+                            <li>Basic understanding of HTML, CSS, and JavaScript</li>
+                            <li>Passion for learning and problem-solving</li>
+                            <li>Ability to work well in a team environment</li>
+                        </ul>
+                    </div>
+                    <p>Prior experience or knowledge in the following areas is a plus:</p>
+                    <div class="qualifications-list">
+                        <ul>
+                            <li>Front-end frameworks (e.g., React, Angular)</li>
+                            <li>Version control systems (e.g., Git)</li>
+                            <li>Responsive design principles</li>
+                        </ul>
+                    </div>
+                </section>
+
+                <section class="cta">
+                    <a href="#Apply" class="cta-button">Apply Now</a>
+                    <p>Have questions? <a href="#Contact">Contact Us</a></p>
+                </section>
+            </div>
+        </main>
+
+        <footer>
+            <div class="container">
+                <p>Contact us:</p>
+                <p><span class="icon ic--outline-location-on"></span> <span>Nagpur, Maharashtra</span></p>
+                <p><span class="icon ic--outline-email"></span> <span>cognifyztechnologies@gmail.com</span></p>
+                <ul class="social-links">
+                    <li><a href="https://www.instagram.com/cognifyz_tech/" target="_blank"><span
+                                class="skill-icons--instagram"></span></a></li>
+                    <li><a href="https://www.linkedin.com/company/cognifyz-techonologies/" target="_blank"><span
+                                class="skill-icons--linkedin"></span></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCw3AbKUno4NQMWcPGFGOEZA" target="_blank"><span
+                                class="logos--youtube-icon"></span></a></li>
+                    <li><a href="https://t.me/cognifyz_technologies" target="_blank"><span class="logos--telegram"></span></a></li>
+                </ul>
+            </div>
+        </footer>
+    </body>
+
 </html>
